각종 버그 수정
